# omni-agent-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_cli/: main.py
agent_cli/adapters/: anthropic.py  gemini.py  openai_compatible.py
agent_cli/cli/: config.py
agent_cli/core/: detector.py  provider.py  runtime.py  schema.py
