[project]
name = "agent-cli"
version = "0.1.0"
description = "Universal multi-provider AI Agent CLI"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.scripts]
agent = "agent_cli.main:app"

[tool.ruff]
line-length = 100
